### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, revamped the Ancient Hook, added a new mob and so much more!
### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!


# New features in 1.3:
* Completely overhauled the Bygones world generation! (See below for more details!)
* Overhauled the look of the Amber Desert biome.
* Overhauled the Ancient Hook.
* Added the Whiskbill.
* Added the Amber Sand, Amber Sandstone, Cut Amber Sandstone, Smooth Amber Sandstone and Chiseled Amber Sandstone blocksets.
* Added the Amber Clump.
* Added the Primordial Beach biome.
* Added the [REDACTED] block, found only in Abandoned Farms.
* Added Glow Gourd Seeds. (Currently only place the "grown" version of the Gourd!)

# Terrain Generation changes and additions:
* Added the "Primordial Beach" biome
* Added noise Pillars to the terrain
* New cave generation
* Redistributed biomes (Beaches will generate next to Oceans, Amber Deserts are less common, and  Primordial Oceans are smaller)
* Made the overall terrain more traversable by flattening it!

# Amber Desert changes and additions:
* Is now made up of Amber Sand and Amber Sandstone.
* Increased amount of Amber "boulders" in the biome.
* Turned down the light levels of all Amber blocks.
* Patches of Amber Clumps generate on walls and ceilings.
* Pointed Amber now generates only on ceilings.
* Tweaked the fog and sky colors to fit the dimension better!

# Ancient Hook changes:
* Ancient Hook now discards when in liquids. (this is to fix strange behaviour with water),
* Ancient Hook now discards when the player is further than 64 blocks away.,
* Ancient Hook now discards when the shift key is pressed.
* Ancient Hook now attaches to blocks way faster as its shoot speed has been increased a lot.
* Ancient Hook sounds are planned for 1.3.1!

# The Whiskbill