@@ -301,6 +301,10 @@
 
   "painting.bygone.hallucigeania.title": "Hallucigeania",
   "painting.bygone.hallucigeania.author": "ZLB1",
+  "painting.bygone.hanging.title": "Hanging",
+  "painting.bygone.hanging.author": "Iri Dark",
+  "painting.bygone.shelves.title": "Shelves",
+  "painting.bygone.shelves.author": "Iri Dark",
 
   "filled_map.bygone_portal": "Bygone Portal Map",
 
