@@ -1,0 +1,5 @@
+{
+  "asset_id": "bygone:hanging",
+  "height": 2,
+  "width": 3
+}
