@@ -19,7 +19,7 @@
 ### Greetings all! It's been a while since the last -major- update, so do we have some changes in store!
 ### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, revamped the Ancient Hook, added a new mob and so much more!
 ### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!
-
+### Please join us in the official [Discord](https://discord.gg/DMW28XH235)!
 
 # New features in 1.3:
 * Completely overhauled the Bygones world generation! (See below for more details!)
@@ -31,6 +31,7 @@
 * Added the Primordial Beach biome.
 * Added the [REDACTED] block, found only in Abandoned Farms.
 * Added Glow Gourd Seeds. (Currently only place the "grown" version of the Gourd!)
+* Added two new paintings from ["Iri_Dark!"](https://bsky.app/profile/iridark.bsky.social)
 
 # Terrain Generation changes and additions:
 * Added the "Primordial Beach" biome
@@ -52,6 +53,7 @@
 * Ancient Hook now discards when the player is further than 64 blocks away.,
 * Ancient Hook now discards when the shift key is pressed.
 * Ancient Hook now attaches to blocks way faster as its shoot speed has been increased a lot.
+* Added Ancient Hook as loot in Bygone Mineshafts.
 * Ancient Hook sounds are planned for 1.3.1!
 
 # The Whiskbill
@@ -93,6 +95,9 @@
 * Fixed multiple Bygone mobs having "lag" between movements.
 * Fixed Underhang Vines popping out Glowstone when right-clicked.
 * Fixed multiple blocks like the Glow Gourds and Dangos from having broken block breaking particles.
+* Fixed Bygone Portal blocks not shattering when the Bygone Portal Frame is broken.
+* Fixed "Bygone: Strippables registered!" appearing in the log.
+* Fixed Mushroom Vines not having a "tip" texture
 
 
 ## **Updates in 1.2.3**
